--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,4 +22,5 @@ on:
         - name: Deploy storybook
           working-directory: ./packages/docs
           run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
-          env: GH_TOKEN: ${{github.actor}}:${{secrets.GITHUB_TOKEN}}
+          env:
+            GH_TOKEN: ${{github.actor}}:${{secrets.GITHUB_TOKEN}}
